docs: make options example visible

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <li><a href="?id=canvas-2d">Canvas 2D</a></li>
         <li><a href="?id=theme">Theme</a></li>
         <li><a href="?id=debug">Debug</a></li>
+        <li><a href="?id=options">Options</a></li>
       </ul>
     </aside>
     <script async src="web_modules/es-module-shims.js" type="module"></script>
